[build-system]
build-backend = "cmeel.build"
requires = ["cmeel-urdfdom[build]", "cmeel[build]", "hpp-fcl[build]"]

[project]
dependencies = ["cmeel-console-bridge", "cmeel-tinyxml", "cmeel-urdfdom", "hpp-fcl"]
description = "A fast and flexible implementation of Rigid Body Dynamics algorithms and their analytical derivatives"
license = "BSD-3-Clause"
name = "pin"
version = "2.6.18"

[project.urls]
homepage = "https://github.com/stack-of-tasks/pinocchio"

[tool.cmeel]
configure-args = [
  "-DBUILD_WITH_COLLISION_SUPPORT=ON",
  "-DBUILD_WITH_LIBPYTHON=OFF",
  "-DSUFFIX_SO_VERSION=OFF"
]

[tool.tomlsort]
all = true
